[gd_scene load_steps=5 format=3 uid="uid://torre_andar_labirinto"]

[ext_resource type="Script" path="res://Scenes/TowerFloor/TowerFloor.gd" id="1_script"]
[ext_resource type="PackedScene" path="res://Scenes/TowerFloor/Wall.tscn" id="2_wall"]
[ext_resource type="PackedScene" path="res://Scenes/Floor/floor.tscn" id="3_fragile"]

[sub_resource type="BoxMesh" id="BoxMesh_floor"]
size = Vector3(100, 0.1, 100)

[sub_resource type="BoxShape3D" id="BoxShape3D_floor"]
size = Vector3(100, 0.1, 100)

[node name="TowerFloor" type="Node3D"]
script = ExtResource("1_script")
floor_size = 100
maze_cell_size = 10
wall_height = 45
ceiling_height = 45
fragile_floor_chance = 0.2

[node name="MainFloor" type="StaticBody3D" parent="."]

[node name="FloorCollision" type="CollisionShape3D" parent="MainFloor"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0)
shape = SubResource("BoxShape3D_floor")

[node name="FloorMesh" type="MeshInstance3D" parent="MainFloor"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0)
mesh = SubResource("BoxMesh_floor")

[node name="Ceiling" type="StaticBody3D" parent="."]

[node name="CeilingCollision" type="CollisionShape3D" parent="Ceiling"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 45, 0)
shape = SubResource("BoxShape3D_floor")

[node name="CeilingMesh" type="MeshInstance3D" parent="Ceiling"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 45, 0)
mesh = SubResource("BoxMesh_floor")

[node name="MazeWalls" type="Node3D" parent="."]

[node name="FloatingFloors" type="Node3D" parent="."]